--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,23 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="id.credoapp.mobile.MainActivity"
     tools:background="@android:color/black"
     android:background="@color/colorBlack">
 
     <include layout="@layout/toolbar"></include>
 
-    <Button
-        android:text="@string/Content_Agree"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/agree"
-        android:onClick="goToCollect"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
-
-</RelativeLayout>
+    <RelativeLayout
+        android:orientation="vertical"
+        android:layout_height="fill_parent"
+        android:layout_width="fill_parent"
+        android:id="@+id/content">
+        <Button
+            android:text="@string/Content_Agree"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/agree"
+            android:onClick="goToCollect"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true" />
+    </RelativeLayout>
+</LinearLayout>
